--- a/02-keyframes/style.scss
+++ b/02-keyframes/style.scss
@@ -28,6 +28,8 @@ body {
   grid-template-areas: 'input button';
 
   // Add an animation here
+  animation-name: enter-form;
+  animation-duration: 1s;
 
   --color: var(--color-gray);
   &:focus-within {
@@ -36,8 +38,46 @@ body {
 
   > .ui-input,
   > .ui-button {
+    animation-name: enter-form;
+    animation-duration: 1s; 
+    animation-delay: 1s;
+    animation-fill-mode: backwards;
     // Add an animation here
   }
+}
+
+@keyframes enter-form {
+  from {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0.3;
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
+
+}
+
+@keyframes enter-inputs {
+  from, to {
+    transform: none;
+  }
+
+  20%, 40%, 60%, 80% {
+    transform: translateX(5%);
+
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    transform: translateX(-5%);
+
+  }
+
 }
 
 .ui-input {
@@ -48,6 +88,13 @@ body {
   border-radius: 0.25rem;
   outline: none;
   transition: inherit;
+
+  &:invalid:not(:focus) {
+    border-color: red;
+    animation: enter-inputs;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+  }
 }
 
 .ui-button {
@@ -68,12 +115,4 @@ body {
 
 .ui-form {
   overflow: hidden;
-}
-
-@keyframes slide-up {
-  // Add keyframes here
-}
-
-@keyframes shake {
-  // Add a shake animation here
 }
